fixed author file

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,12 +1,11 @@
-Caitlin Lanssens <farnaz_chem@yahoo.com>
-Cristina E. González-Espinoza <farnaz_chem@yahoo.com>
-Derrick <farnaz_chem@yahoo.com>
+Caitlin Lanssens <lanssenc@mcmaster.ca>
+Cristina E. González-Espinoza <crisbeth46@gmail.com>
 Derrick <yxt1991@gmail.com>
-Esteban Vohringer-Martine <farnaz_chem@yahoo.com>
+Esteban Vohringer-Martine <estebanvohringer@gmail.com>
 Farnaz Heidar-Zadeh <farnaz_chem@yahoo.com>
 Gaby <diazg1@mcmaster.ca>
-Matthew Chan <farnaz_chem@yahoo.com>
-Michael Richer <farnaz_chem@yahoo.com>
-PaulWAyers <farnaz_chem@yahoo.com>
+Matthew Chan <chanmhy@mcmaster.ca>
+Michael Richer <richerm@mcmaster.ca>
+PaulWAyers <ayers@mcmaster.ca>
 Stijn Fias <stijn.fias@gmail.com>
 Taewon D. Kim <kimt33@mcmaster.ca>
