Add Fanwang to authors list

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,6 +2,7 @@ Caitlin Lanssens <lanssenc@mcmaster.ca>
 Cristina E. González-Espinoza <crisbeth46@gmail.com>
 Derrick <yxt1991@gmail.com>
 Esteban Vohringer-Martine <estebanvohringer@gmail.com>
+Fanwang Meng <fwmeng88@gmail.com>
 Farnaz Heidar-Zadeh <farnaz_chem@yahoo.com>
 Gaby <diazg1@mcmaster.ca>
 Matthew Chan <chanmhy@mcmaster.ca>
