Update AUTHORS to add Ali Tehrani

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
+Ali-Tehrani <alirezatehrani24@gmail.com>
 Caitlin Lanssens <lanssenc@mcmaster.ca>
 Cristina E. González-Espinoza <crisbeth46@gmail.com>
 Derrick <yxt1991@gmail.com>
