error with iodata load_one

--- a/examples/annotate/molecular_visualization.ipynb
+++ b/examples/annotate/molecular_visualization.ipynb
@@ -21,14 +21,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "fa01486b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# import required libraries\n",
-    "#import iodata \n",
-    "#from iodata import iodata\n",
+    "from iodata import iodata\n",
     "\n",
     "import rdkit\n",
     "from rdkit import Chem\n",
@@ -70,6 +69,28 @@
     "`xyz_files = glob.glob('/Users/johnsmith/Desktop/structures/*.xyz')`\n",
     "\n",
     "**Note**: It will be easiest to identify your molecules within your grid if your xyz files have sensible names. This is due to how names of the molecules are defined within this notebook, which is by taking the name of the file and cutting off the \".xyz\" extension from it. For example, \"101_IndolebenzeneTshapecomplex.xyz\" will be named \"101_IndolebenzeneTshapecomplex\" in the grids generated. Thus, try not to have your files named like \"C46H65N15O12S2.xyz\" or anything else nonsensical to you or a third-party reader."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "aee7d433",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'load_one' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-43d376d587b8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mloadInput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_one\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"dichloropyridine26_q+0.fchk\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'load_one' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "loadInput = load_one(\"dichloropyridine26_q+0.fchk\")"
    ]
   },
   {
@@ -243,7 +264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
