add pyscf loading tests

--- a/chemtools/wrappers/pyscf_gbasis_comparison/pyscf_vs_gbasis.ipynb
+++ b/chemtools/wrappers/pyscf_gbasis_comparison/pyscf_vs_gbasis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "source": [
     "import gbasis\n",
     "import subprocess\n",
@@ -19,7 +19,7 @@
     "def time_func(func):\n",
     "    def wrapper(*args, **kwargs):\n",
     "        start = perf_counter()\n",
-    "        for _ in range(1000):\n",
+    "        for _ in range(5):\n",
     "            func(*args, **kwargs)\n",
     "        end = perf_counter()\n",
     "        result = end - start\n",
@@ -41,29 +41,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "source": [
     "# get the mols\n",
     "mol_chemtools = chemtools.Molecule.from_file('water_neutral.fchk')\n",
     "\n",
     "mol_pyscf = gto.M(\n",
     "    atom = 'O 0.01086593, 0.00805023, -0.00568808; H 0.52133765,  1.67452412,  0.47604091; H 1.13869228, -0.44555963, -1.34435117',\n",
-    "    basis = '6-311+g*'\n",
+    "    basis = 'CC-pVTZ'\n",
     ")\n",
     "mf = scf.RHF(mol_pyscf).run()\n",
     "\n",
     "# get the points\n",
     "grid_3d = np.random.random((100,3))"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "converged SCF energy = -75.6621279327216\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -95,9 +87,9 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "1000 iters took 0.20292760999291204 seconds\n",
-      "1000 iters took 16.803835386002902 seconds\n",
-      "pyscf output shape: (100, 28)\n",
+      "1000 iters took 0.0030151749961078167 seconds\n",
+      "1000 iters took 0.13405422799405642 seconds\n",
+      "pyscf output shape: (100, 58)\n",
       "gbasis output shape: (58, 100)\n"
      ]
     }
@@ -115,7 +107,6 @@
    "cell_type": "code",
    "execution_count": 4,
    "source": [
-    "\n",
     "@time_func\n",
     "def pyscf_ao_calc():\n",
     "    global mol_pyscf, grid_3d\n",
@@ -139,9 +130,9 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "1000 iters took 0.8816371330030961 seconds\n",
-      "1000 iters took 199.63378380000358 seconds\n",
-      "pyscf output shape: (4, 100, 28)\n",
+      "1000 iters took 0.021943305007880554 seconds\n",
+      "1000 iters took 1.2868181510129943 seconds\n",
+      "pyscf output shape: (4, 100, 58)\n",
       "gbasis output shape: (100, 3)\n"
      ]
     }
@@ -182,9 +173,9 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "1000 iters took 2.5399583149992395 seconds\n",
-      "1000 iters took 759.2152310179954 seconds\n",
-      "pyscf output shape: (10, 100, 28)\n",
+      "1000 iters took 0.03795489398180507 seconds\n",
+      "1000 iters took 4.804126080998685 seconds\n",
+      "pyscf output shape: (10, 100, 58)\n",
       "gbasis output shape: (100, 3, 3)\n"
      ]
     }
@@ -224,35 +215,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "source": [
-    "\n",
-    "# Get the molecule and the dm\n",
-    "mol_1 = gto.M(\n",
-    "    verbose = 0,\n",
-    "    atom = 'C 0 0 0; O 0 0 1.5',\n",
-    "    basis = 'ccpvdz'\n",
-    ")\n",
-    "\n",
-    "mol_2 = gto.M(\n",
-    "    verbose = 0,\n",
-    "    atom = 'H 0 1 0; H 1 0 0',\n",
-    "    basis = 'ccpvdz'\n",
-    ")\n",
-    "mf = scf.RHF(mol_1).run()\n",
-    "mf.kernel()\n",
-    "dm = mf.make_rdm1()"
-   ],
+   "execution_count": null,
+   "source": [],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "source": [
-    "# overlap = gto.intor_cross('int1e_ovlp', mol_1, mol_2)\n",
-    "# print('overlap shape (%d, %d)' % overlap.shape)"
+    "import numpy\n",
+    "from pyscf import gto\n",
+    "from pyscf.dft import numint\n",
+    "\n",
+    "'''\n",
+    "Evaluate AO functions on given grid coordinates.\n",
+    "'''\n",
+    "\n",
+    "mol = gto.M(\n",
+    "    verbose = 0,\n",
+    "    atom = '''\n",
+    "    o    0    0.       0.\n",
+    "    h    0    -0.757   0.587\n",
+    "    h    0    0.757    0.587''',\n",
+    "    basis = '6-31g')\n",
+    "\n",
+    "# Uniform grids\n",
+    "coords = []\n",
+    "for ix in numpy.arange(-10, 10, 1.):\n",
+    "    for iy in numpy.arange(-10, 10, 1.):\n",
+    "        for iz in numpy.arange(-10, 10, 1.):\n",
+    "            coords.append((ix,iy,iz))\n",
+    "coords = numpy.array(coords)\n",
+    "\n",
+    "# AO value\n",
+    "ao_value = numint.eval_ao(mol, coords)\n",
+    "print('13 basis, 8000 xyz  %s' % str(ao_value.shape))\n",
+    "\n",
+    "# AO value and its gradients\n",
+    "\n",
+    "@time_func\n",
+    "def val_grad():\n",
+    "    ao_value = numint.eval_ao(mol, grid_3d, deriv=1)\n",
+    "    # print('13 basis, 8000 xyz  %s' % str(ao_value.shape))\n",
+    "    return ao_value.shape\n",
+    "val_grad()"
    ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "13 basis, 8000 xyz  (8000, 13)\n",
+      "1000 iters took 0.001278826006455347 seconds\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(4, 100, 13)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
    "outputs": [],
    "metadata": {}
   }
