minor comment change

--- a/chemtools/wrappers/pyscf_gbasis_comparison/pyscf_vs_gbasis.ipynb
+++ b/chemtools/wrappers/pyscf_gbasis_comparison/pyscf_vs_gbasis.ipynb
@@ -7,6 +7,7 @@
     "import gbasis\n",
     "import numpy as np\n",
     "import chemtools\n",
+    "import subprocess\n",
     "from numpy.testing import assert_allclose\n",
     "from pyscf.dft import numint\n",
     "from iodata import load_one\n",
@@ -64,7 +65,7 @@
     "print(mf.mo_coeff.shape)\n",
     "\n",
     "try:\n",
-    "    assert_allclose(mol_chemtools.mo.coefficient[0], mf.mo_coeff, rtol=1e-5, atol=1e-08)\n",
+    "    assert_allclose(mol_chemtools.mo.coefficient[1], mf.mo_coeff, rtol=1e-5, atol=1e-08)\n",
     "except AssertionError as e:\n",
     "    print(e)"
    ],
@@ -81,13 +82,13 @@
       "\n",
       "Mismatched elements: 3339 / 3364 (99.3%)\n",
       "Max absolute difference: 7.31570753\n",
-      "Max relative difference: 1.2576048e+16\n",
-      " x: array([[ 9.732297e-01, -2.049642e-01, -8.922210e-08, ..., -9.718058e-08,\n",
+      "Max relative difference: 3.72567153e+17\n",
+      " x: array([[ 9.732297e-01, -2.049642e-01, -8.922210e-08, ..., -9.718057e-08,\n",
       "        -7.764849e-07,  1.526411e+00],\n",
       "       [-9.379156e-03,  4.657901e-01,  2.837934e-07, ..., -1.798607e-06,...\n",
-      " y: array([[ 9.766285e-01, -4.612257e-03, -3.234713e-16, ..., -4.343873e-01,\n",
+      " y: array([[ 9.766285e-01, -4.612257e-03, -2.079873e-16, ..., -4.343873e-01,\n",
       "        -1.944477e-06,  2.528644e+00],\n",
-      "       [-3.630840e-04,  5.651166e-01,  1.405175e-16, ..., -4.871092e-01,...\n"
+      "       [-3.630840e-04,  5.651166e-01, -1.501893e-15, ..., -4.871092e-01,...\n"
      ]
     }
    ],
@@ -106,7 +107,8 @@
    "source": [
     "# Evaluation of MOs\n",
     "### Problem: pyscf requires mo_coeff to calculate mo - need to get those from chemtools Molecule somehow (custom class?). \n",
-    "### otherwise energy calculation is required"
+    "### otherwise energy calculation is required\n",
+    "### Solution(?): passing the parameters from chemtools to pyscf's calculation "
    ],
    "metadata": {}
   },
@@ -140,8 +142,8 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "100 iters of pyscf_calc took 0.08522437200008426 seconds\n",
-      "100 iters of gbasis_calc took 1.1743194870032312 seconds\n",
+      "100 iters of pyscf_calc took 0.036641047001467086 seconds\n",
+      "100 iters of gbasis_calc took 1.0262365060043521 seconds\n",
       "pyscf output shape: (5, 58)\n",
       "gbasis output shape: (58, 5)\n",
       "\n",
@@ -192,8 +194,8 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "100 iters of pyscf_grad_calc took 0.0705173400019703 seconds\n",
-      "100 iters of gbasis_grad_calc took 10.950103749000846 seconds\n",
+      "100 iters of pyscf_grad_calc took 0.03556778699567076 seconds\n",
+      "100 iters of gbasis_grad_calc took 10.454570774003514 seconds\n",
       "pyscf output shape: (3, 5, 58)\n",
       "gbasis output shape: (5, 3)\n"
      ]
@@ -242,8 +244,8 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "100 iters of pyscf_hessian_calc took 0.05059200499817962 seconds\n",
-      "100 iters of gbasis_hessian_calc took 52.76469741400069 seconds\n",
+      "100 iters of pyscf_hessian_calc took 0.049163502000737935 seconds\n",
+      "100 iters of gbasis_hessian_calc took 48.48874538199743 seconds\n",
       "pyscf output shape: (6, 5, 58)\n",
       "gbasis output shape: (5, 3, 3)\n"
      ]
@@ -302,33 +304,18 @@
     "    return MEP\n",
     "pyscf_esp = pyscf_esp_calc(mol_pyscf)\n",
     "\n",
-    "@time_func\n",
-    "def gbasis_esp_calc():\n",
-    "    mo = mol_chemtools.compute_esp(grid_3d)\n",
-    "    return mo\n",
-    "gbasis_hessian = gbasis_esp_calc()"
+    "# @time_func\n",
+    "# def gbasis_esp_calc():\n",
+    "#     mo = mol_chemtools.compute_esp(grid_3d)\n",
+    "#     return mo\n",
+    "# gbasis_hessian = gbasis_esp_calc()"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "100 iters of pyscf_esp_calc took 0.1352815130012459 seconds\n"
-     ]
-    },
-    {
-     "output_type": "error",
-     "ename": "NotImplementedError",
-     "evalue": "Mixed coordinate types are not supported yet.",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-966e4d0d6683>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0mmo\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmol_chemtools\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompute_esp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgrid_3d\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mmo\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m \u001b[0mgbasis_hessian\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgbasis_esp_calc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-1-bdd3582c3dfc>\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     18\u001b[0m         \u001b[0;31m# run the iters\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum_of_iter\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m             \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m         \u001b[0;31m# end and print results\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m         \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mperf_counter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-6-966e4d0d6683>\u001b[0m in \u001b[0;36mgbasis_esp_calc\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m@\u001b[0m\u001b[0mtime_func\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mgbasis_esp_calc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m     \u001b[0mmo\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmol_chemtools\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompute_esp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgrid_3d\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mmo\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0mgbasis_hessian\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgbasis_esp_calc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Desktop/GSoC/chemtools/chemtools/wrappers/molecule.py\u001b[0m in \u001b[0;36mcompute_esp\u001b[0;34m(self, points, charges)\u001b[0m\n\u001b[1;32m    219\u001b[0m             \u001b[0mtf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_iodata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcoeffs\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_iodata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moccs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_iodata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcoeffs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    220\u001b[0m             return self._ao.compute_esp(self._dm, points, self.coordinates,\n\u001b[0;32m--> 221\u001b[0;31m                                         charges, transform=tf)\n\u001b[0m\u001b[1;32m    222\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    223\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"mo attribute cannot be empty or None\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Desktop/GSoC/chemtools/chemtools/wrappers/molecule.py\u001b[0m in \u001b[0;36mcompute_esp\u001b[0;34m(self, dm, points, coordinates, charges, transform)\u001b[0m\n\u001b[1;32m    384\u001b[0m                                            coord_type=self._coord_type)\n\u001b[1;32m    385\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 386\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mNotImplementedError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Mixed coordinate types are not supported yet.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    387\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    388\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mcompute_ked\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpoints\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtransform\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNotImplementedError\u001b[0m: Mixed coordinate types are not supported yet."
+      "100 iters of pyscf_esp_calc took 0.163203213000088 seconds\n"
      ]
     }
    ],
@@ -379,8 +366,8 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "100 iters of pyscf_dens_calc took 0.09980899299989687 seconds\n",
-      "100 iters of gbasis_density_calc took 1.1071392470003047 seconds\n",
+      "100 iters of pyscf_dens_calc took 0.09702876600204036 seconds\n",
+      "100 iters of gbasis_density_calc took 1.0663221319991862 seconds\n",
       "\n",
       "Not equal to tolerance rtol=1e-07, atol=0\n",
       "\n",
@@ -423,15 +410,18 @@
     "\n",
     "print(f'pyscf output shape: {pyscf_ked.shape}')\n",
     "print(f'gbasis output shape: {gbasis_ked.shape}')\n",
-    "assert_allclose(pyscf_ked, gbasis_ked)"
+    "try:\n",
+    "    assert_allclose(pyscf_ked, gbasis_ked)\n",
+    "except AssertionError as e:\n",
+    "    print(e)"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "100 iters of pyscf_ked_calc took 0.1600142009992851 seconds\n",
-      "100 iters of gbasis_ked_calc took 3.5803151840009377 seconds\n",
+      "100 iters of pyscf_ked_calc took 0.17078738899726886 seconds\n",
+      "100 iters of gbasis_ked_calc took 3.6768004939949606 seconds\n",
       "pyscf output shape: (5,)\n",
       "gbasis output shape: (5,)\n"
      ]
