will no longer be updated

--- a/examples/ConvertToChemJSON/ConvertIoDataJSON.ipynb
+++ b/examples/ConvertToChemJSON/ConvertIoDataJSON.ipynb
@@ -19,12 +19,13 @@
     "4. [ChemicalJSON](https://wiki.openchemistry.org/Chemical_JSON)\n",
     "5. [JSON Encoder](https://stackoverflow.com/questions/57269741/typeerror-object-of-type-ndarray-is-not-json-serializable)\n",
     "\n",
-    "## Limitations of File Formats"
+    "## Limitations of File Formats\n",
+    "Per IOData documentation, certain file formats cannot read certain features via IOData, an example being the inability to use `bonds` to obtain bond data from `fchk` files "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 20,
    "id": "3a9406b1",
    "metadata": {},
    "outputs": [],
@@ -46,15 +47,15 @@
     "1. We use `load_one` to load our input file\n",
     "2. We also want to initialize our chemical JSON by creating a dictionary starting with element `\"chemicaljson\":0` \n",
     "3. We now want to populate our dictionary, `molDict`, by using IOData API calls, such as \n",
-    "    - title - obtain the name of the molecule, including information such as the computational basis set used, and the hybridization state\n",
-    "    - atcoords - obtain 3D XYZ Cartesian Coordinates\n",
-    "    - atnums - obtain the atomic number of each atom in the system\n",
-    "    - atcharges - obtain a dictionary detailing the charges of each atom in the system \n"
+    "    - `title` - obtain the name of the molecule, including information such as the computational basis set used, and the hybridization state\n",
+    "    - `atcoords` - obtain 3D XYZ Cartesian Coordinates\n",
+    "    - `atnums` - obtain the atomic number of each atom in the system\n",
+    "    - `atcharges` - obtain a dictionary detailing the charges of each atom in the system \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 30,
    "id": "07c8fe84",
    "metadata": {},
    "outputs": [
@@ -63,6 +64,7 @@
      "output_type": "stream",
      "text": [
       "dichloropyridine26_q+0 ub3lyp/cc-pvtz sp-stable\n",
+      " \n",
       " \n",
       "{'chemicaljson': 0, 'title': 'dichloropyridine26_q+0 ub3lyp/cc-pvtz sp-stable', 'coords': {'3d': array([[-4.95130924e+00,  2.31173977e+00, -2.64561659e-04],\n",
       "       [ 4.95149821e+00,  2.31139962e+00,  2.07869875e-04],\n",
@@ -74,7 +76,7 @@
       "       [ 2.13769600e+00,  5.39705784e-01,  7.55890453e-05],\n",
       "       [-1.70075352e-04, -5.47831606e+00,  1.51178091e-04],\n",
       "       [-4.10063012e+00, -3.05289036e+00, -7.55890453e-05],\n",
-      "       [ 4.10047894e+00, -3.05315492e+00,  2.83458920e-04]])}, 'elements': {'numbers': array([17, 17,  7,  6,  6,  6,  6,  6,  1,  1,  1])}}\n"
+      "       [ 4.10047894e+00, -3.05315492e+00,  2.83458920e-04]])}, 'atoms': {'elements': {'numbers': array([17, 17,  7,  6,  6,  6,  6,  6,  1,  1,  1])}}}\n"
      ]
     }
    ],
@@ -90,20 +92,23 @@
     "\n",
     "print(\" \")\n",
     "\n",
-    "molCoord = np.array(mol.atcoords)\n",
+    "molCoord = np.asarray(mol.atcoords)\n",
+    "\n",
     "molDict.update({'coords':\n",
     "                {'3d':molCoord}\n",
     "               })\n",
     "        \n",
-    "    \n",
+    "\n",
     "molAtomicNums = mol.atnums\n",
-    "molDict.update({'elements':\n",
+    "molDict.update({'atoms':\n",
+    "                {'elements':\n",
     "                {'numbers':molAtomicNums}\n",
-    "               }) \n",
+    "               }}) \n",
     "\n",
     "\n",
+    "print(\" \")\n",
     "\n",
-    "\n",
+    "# Sanity Check\n",
     "print(molDict)"
    ]
   },
@@ -118,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 28,
    "id": "5d37c066",
    "metadata": {},
    "outputs": [],
@@ -152,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 29,
    "id": "1ed48333",
    "metadata": {},
    "outputs": [
@@ -222,33 +227,24 @@
       "         ]\n",
       "      ]\n",
       "   },\n",
-      "   \"elements\": {\n",
-      "      \"numbers\": [\n",
-      "         17,\n",
-      "         17,\n",
-      "         7,\n",
-      "         6,\n",
-      "         6,\n",
-      "         6,\n",
-      "         6,\n",
-      "         6,\n",
-      "         1,\n",
-      "         1,\n",
-      "         1\n",
-      "      ]\n",
+      "   \"atoms\": {\n",
+      "      \"elements\": {\n",
+      "         \"numbers\": [\n",
+      "            17,\n",
+      "            17,\n",
+      "            7,\n",
+      "            6,\n",
+      "            6,\n",
+      "            6,\n",
+      "            6,\n",
+      "            6,\n",
+      "            1,\n",
+      "            1,\n",
+      "            1\n",
+      "         ]\n",
+      "      }\n",
       "   }\n",
       "}\n"
-     ]
-    },
-    {
-     "ename": "UnsupportedOperation",
-     "evalue": "not readable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUnsupportedOperation\u001b[0m                      Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-71-07da9e0f2894>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"dichloropyridine26_q+0.json\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"w\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmolJson\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mUnsupportedOperation\u001b[0m: not readable"
      ]
     }
    ],
