added contour plot, visualizes, but currently incorrect

--- a/examples/plotting/2D_Plotting_Gradient.ipynb
+++ b/examples/plotting/2D_Plotting_Gradient.ipynb
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
     "plt.figure(figsize=(10,10))\n",
     "plt.plot(rot_coords[:, 0], rot_coords[:, 1], \"ro\", label=\"Molecular Coordinates\")\n",
     "plt.legend()\n",
-    "plt.contour(x,y,Z,)\n",
+    "plt.contourf(X,Y,Z,)\n",
     "#plt.contourf(X,Y,Z, cmap='Reds')\n",
     "\n",
     "plt.show()"
